--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ dateparser>=0.7.2
 elasticsearch-dsl>=7.2.0,<8.0.0
 kafka-python>=1.4.4
 mailsuite>=1.6.1
+mail-parser>=3.15.0
 nose>=1.3.7
 flake8>=3.7.8
 doc8>=0.8.0
